# forklift-safety-system

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/copilot/: index.md  readme.md
.github/copilot/checklists/: code-review.md
.github/copilot/core/: architecture.md  conventions.md
.github/copilot/examples/: implementing-new-feature.md
.github/copilot/templates/: bugfix-spec.md  feature-spec.md
.github/instructions/: architecture.instructions.md  configuration.instructions.md  cpp.instructions.md  inference.instructions.md  security.instructions.md  testing.instructions.md  threading.instructions.md  transport.instructions.md
.github/prompts/: opsx-adr.prompt.md  opsx-apply.prompt.md  opsx-archive.prompt.md  opsx-continue.prompt.md  opsx-explore.prompt.md  opsx-ff.prompt.md  opsx-learnings.prompt.md  opsx-new.prompt.md  opsx-pr.prompt.md  opsx-review.prompt.md  opsx-verify.prompt.md
.github/skills/opsx-adr/: SKILL.md
.github/skills/opsx-apply/: SKILL.md
.github/skills/opsx-archive/: SKILL.md
.github/skills/opsx-continue/: SKILL.md
.github/skills/opsx-explore/: SKILL.md
.github/skills/opsx-ff/: SKILL.md
.github/skills/opsx-learnings/: SKILL.md
.github/skills/opsx-new/: SKILL.md
.github/skills/opsx-pr/: SKILL.md
.github/skills/opsx-review/: SKILL.md
.github/skills/opsx-verify/: SKILL.md
.github/workflows/: copilot-setup-steps.yml
conf/: system.yaml  system_test.yaml
deploy/: forklift-safety.service  install_jetson.sh
docs/adr/: 0001-clean-architecture.md  0002-inference-backends.md  0003-frame-drop-oldest.md  0004-mjpeg-viewer.md  0005-backend-device-selection.md  README.md
docs/architecture/: ai-extensibility.md  architecture.md  module-boundaries.md  pipeline.md  production-readiness-review.md  threading.md  ui-streaming.md  websocket-api.md
docs/deployment/: README.md  jetson-nano.md  laptop-testing.md
docs/development/: code-review.md  implementing-new-feature.md  local-setup.md
docs/development/conventions/: architecture.md  configuration.md  cpp.md  error-handling.md  inference.md  logging.md  naming.md  performance.md  testing.md  threading.md  transport.md
include/forklift/application/: AlertPublisher.h  DetectionStreamPublisher.h  FrameAnnotator.h  FrameProcessingPipeline.h  FrameStreamPublisher.h  InferenceEngine.h  RiskDetectionService.h  SafetyZoneService.h  VideoSource.h
include/forklift/domain/: Alert.h  BoundingBox.h  Detection.h  Frame.h  ObjectClass.h  SafetyZone.h
include/forklift/infrastructure/ai/: InferenceEngineFactory.h  OnnxInferenceEngine.h  YoloV8Postprocessor.h
include/forklift/infrastructure/config/: YamlConfigLoader.h
include/forklift/infrastructure/logging/: Logger.h
include/forklift/infrastructure/render/: OverlayFrameAnnotator.h
include/forklift/infrastructure/transport/: MjpegStreamServer.h  WebSocketAlertPublisher.h
include/forklift/infrastructure/video/: RtspCameraSource.h  VideoFileSource.h
include/forklift/shared/: ConcurrentQueue.h  Result.h  ThreadPool.h
models/: README.md
openspec/: AGENTS.md  AUTHORING.md  README.md  config.yaml
openspec/changes/: README.md
openspec/changes/_archived/: README.md
openspec/examples/example-add-cooldown-policy/: README.md  brief.md  meta.yaml  tasks.md
openspec/models/: routing.yaml
openspec/schemas/: full.yaml  lite.yaml
openspec/templates/full/: design.md  proposal.md  spec.md  tasks.md
openspec/templates/lite/: brief.md  tasks.md
scripts/: download_model.sh  download_test_video.sh  export_yolov8.py  run_rtsp.sh  run_test.sh  setup_test.sh
src/application/: FrameProcessingPipeline.cpp  RiskDetectionService.cpp  SafetyZoneService.cpp
src/domain/: Alert.cpp  BoundingBox.cpp  SafetyZone.cpp
src/infrastructure/ai/: InferenceEngineFactory.cpp  OnnxInferenceEngine.cpp  TensorRTInferenceEngine.cpp  YoloV8Postprocessor.cpp
src/infrastructure/config/: YamlConfigLoader.cpp
src/infrastructure/logging/: Logger.cpp
src/infrastructure/render/: OverlayFrameAnnotator.cpp
src/infrastructure/transport/: MjpegStreamServer.cpp  WebSocketAlertPublisher.cpp
src/infrastructure/video/: RtspCameraSource.cpp  VideoFileSource.cpp
src/interface/: main.cpp
src/shared/: ThreadPool.cpp
tests/: CMakeLists.txt  test_harness.h  test_main.cpp
tests/application/: risk_detection_service_test.cpp  safety_zone_service_test.cpp
tests/domain/: bounding_box_test.cpp  safety_zone_test.cpp
web/: app.js  index.html  style.css
